@@ -24,6 +24,8 @@ Changes from versions 2.2.* to version 2.3.0:
 - The mpfr.info file is now installed in the share subdirectory
   (as required by the Filesystem Hierarchy Standard); see output
   of "./configure --help".
+- new functions mpfr_j0, mpfr_j1, mpfr_jn, mpfr_y0, mpfr_y1, mpfr_yn,
+  mpfr_lgamma, mpfr_remainder, mpfr_remquo.
 TO BE COMPLETED BEFORE VERSION 2.2.2 IS RELEASED
 
 Changes from versions 2.1.* to version 2.2.0:
